<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/home">

    <fragment
        android:id="@+id/home"
        android:name="com.example.empoweringthenation.Home"
        android:label="@string/Home_label"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_home_to_Six_Months"
            app:destination="@id/Six_Months"
            app:popUpTo="@id/home"
            app:popUpToInclusive="true" />

        <action
            android:id="@+id/action_home_to_Six_Weeks"
            app:destination="@id/Six_Weeks"
            app:popUpTo="@id/home"
            app:popUpToInclusive="true" />

        <action
            android:id="@+id/action_home_to_contact"
            app:destination="@id/contact"
            app:popUpTo="@id/home"
            app:popUpToInclusive="true" />

    </fragment>





    <fragment
        android:id="@+id/Six_Months"
        android:name="com.example.empoweringthenation.Six_Months"
        android:label="@string/Six_Months_label"
        tools:layout="@layout/fragment_six_months">

        <action
            android:id="@+id/action_Six_Months_to_First_Aid"
            app:destination="@id/First_Aid" />
        <action
            android:id="@+id/action_Six_Months_to_Sewing"
            app:destination="@id/Sewing" />

        <action
            android:id="@+id/action_Six_Months_to_Landscaping"
            app:destination="@id/Landscaping" />

        <action
            android:id="@+id/action_Six_Months_to_Life_Skills"
            app:destination="@id/Life_Skills" />

        <action
            android:id="@+id/action_Six_Months_to_home"
            app:destination="@id/home"
            app:popUpTo="@id/Six_Months"
            app:popUpToInclusive="true" />

        <action
            android:id="@+id/action_Six_Months_to_contact"
            app:destination="@id/contact"
            app:popUpTo="@id/Six_Months"
            app:popUpToInclusive="true" />
    </fragment>

    <activity
        android:id="@+id/First_Aid"
        android:name="com.example.empoweringthenation.First_Aid"
        android:label="@string/First_Aid_label"
        tools:layout="@layout/activity_first_aid">
    </activity>

    <activity
        android:id="@+id/Sewing"
        android:name="com.example.empoweringthenation.Sewing"
        android:label="@string/Sewing_label"
        tools:layout="@layout/activity_sewing">
    </activity>

    <activity
        android:id="@+id/Landscaping"
        android:name="com.example.empoweringthenation.Landscaping"
        android:label="@string/Landscaping_label"
        tools:layout="@layout/activity_landscaping">
    </activity>

    <activity
        android:id="@+id/Life_Skills"
        android:name="com.example.empoweringthenation.Life_Skills"
        android:label="@string/Life_Skills_label"
        tools:layout="@layout/activity_life_skills">
    </activity>




    <fragment
        android:id="@+id/Six_Weeks"
        android:name="com.example.empoweringthenation.Six_Weeks"
        android:label="@string/Six_Weeks_label"
        tools:layout="@layout/fragment_six_weeks">

        <action
            android:id="@+id/action_Six_Weeks_to_Child_Minding"
            app:destination="@id/Child_Minding" />

        <action
            android:id="@+id/action_Six_Weeks_to_Cooking"
            app:destination="@id/Cooking" />

        <action
            android:id="@+id/action_Six_Weeks_to_Garden_Maintenance"
            app:destination="@id/Garden_Maintenance" />

        <action
            android:id="@+id/action_Six_Weeks_to_home"
            app:destination="@id/home"
            app:popUpTo="@id/Six_Weeks"
            app:popUpToInclusive="true" />

        <action
            android:id="@+id/action_Six_Weeks_to_contact"
            app:destination="@id/contact"
            app:popUpTo="@id/Six_Weeks"
            app:popUpToInclusive="true" />

    </fragment>

    <activity
        android:id="@+id/Child_Minding"
        android:name="com.example.empoweringthenation.Child_Minding"
        android:label="@string/Child_Minding_label"
        tools:layout="@layout/activity_child_minding">
    </activity>

    <activity
        android:id="@+id/Cooking"
        android:name="com.example.empoweringthenation.Cooking"
        android:label="@string/Cooking_label"
        tools:layout="@layout/activity_cooking">
    </activity>

    <activity
        android:id="@+id/Garden_Maintenance"
        android:name="com.example.empoweringthenation.Garden_Maintenance"
        android:label="@string/Garden_Maintenance_label"
        tools:layout="@layout/activity_garden_maintenance">
    </activity>

    <fragment
        android:id="@+id/contact"
        android:name="com.example.empoweringthenation.Contact"
        android:label="@string/Contact_label"
        tools:layout="@layout/fragment_contact">

        <action
            android:id="@+id/action_contact_to_Six_Months"
            app:destination="@id/Six_Months"
            app:popUpTo="@id/contact"
            app:popUpToInclusive="true" />

        <action
            android:id="@+id/action_contact_to_Six_Weeks"
            app:destination="@id/Six_Weeks"
            app:popUpTo="@id/contact"
            app:popUpToInclusive="true" />

        <action
            android:id="@+id/action_contact_to_home"
            app:destination="@id/home"
            app:popUpTo="@id/contact"
            app:popUpToInclusive="true" />
    </fragment>


</navigation>